# djprojectexploration

./: .gitignore  Makefile  Project Framework 3-6.qmd  README.md  pyproject.toml
PathSearchAlgorithm/: BestPath.py  input_guidelines.md  test1.py  test2.py
data/chroma_embeddings/: ara_mix_tracks.npz  aries_mix_tracks.npz  chroma_cosine_similarity_matrix.npz  chroma_embeddings.npz  csv_keys_shift_adjusted_table.csv  csv_keys_shift_adjusted_table_aries_mix.csv  detected_keys_shift_adjusted_table.csv  detected_keys_shift_adjusted_table_aries_mix.csv  harmonic_similarity_fifth_aware_matrix.npz  harmonic_similarity_fifth_aware_matrix_aries_mix.npz
data/deam_valence_arousal/: aries_mix_tracks.npz  deam_track_predictions.csv
data/maest_embeddings/: ara_mix_tracks.npz  aries_mix_tracks.npz  dataset_tracks.npz  maest_embeddings.npz
data/maest_embeddings/mix_similarity/: mix_order_transition_distances.csv  pairwise_distance_matrices.npz
data/multimodal_compatibility/: combined_compatibility_matrix.npz  illusion_seed_distribution.csv
data/tempo_embeddings/: ara_mix_tracks.npz  aries_mix_tracks.npz
music/: embedding.json  extracted_features.json
music/ara-mix/: ara_mix_tracks.csv
music/aries-mix/: aries_mix_tracks.csv
music/bootes-mix/: bootes_mix_tracks.csv
music/misc/: playlist_filepaths.txt
notebooks/: chroma_embedding.ipynb  embeddings.ipynb  energy_analysis.ipynb  interactive_pacmap.ipynb  interactive_pacmap_2.ipynb  maest_embeddings_batch.ipynb  multimodal_compatibility_main.ipynb  old_visualizations.ipynb  visualization.ipynb
playground/: dj_automix.py  music_analyzer.py  music_manipulator.py  music_splitter.py
scripts/: playlist_csv.sh  playlist_files.sh
scripts/music/: export_playlist_filepaths.sh  export_playlist_tracks_csv.sh
src/djprojectexploration/: __init__.py  audio_snippets.py  chroma_embedding.py  chroma_embedding_extractor.py  chromagram_plotter.py  deam_embedding_extractor.py  deam_valence_arousal.py  essentia_feature_extractor.py  harmonic_compatibility.py  maest_embedding_extractor.py  main.py  multimodal_compatibility.py  playlist_embedding_pipeline.py  tempo_embedding.py  tempo_embedding_extractor.py
