[project]
name = "djprojectexploration"
version = "0.1.0"
description = "Exploration project scaffolded with uv."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
]

[project.scripts]
djprojectexploration = "djprojectexploration.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
