[project]
name = "djprojectexploration"
version = "0.1.0"
description = "Exploration project scaffolded with uv."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "essentia>=2.1b6.dev1389",
    "essentia-tensorflow>=2.1b6.dev1389",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pacmap",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "tensorflow>=2.15.0",
]

[project.scripts]
djprojectexploration = "djprojectexploration.essentia_feature_extractor:main"
djprojectexploration-maest = "djprojectexploration.maest_embedding_extractor:main"
djprojectexploration-chromagram = "djprojectexploration.chromagram_plotter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
